# splinter

./: .dockerignore  .env-example  .gitignore  .style.yapf  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.production.yml  docker-compose.yml  package-lock.json  package.json  pyproject.toml  runtest.py  tailwind.config.js  tsconfig.json  tsr.config.json  vite.config.ts
.github/: Dockerfile
.github/workflows/: ci.yml
scripts/: generate_vapid_keys.py
splinter/: __init__.py  admin.py  authentication.py  celery_app.py  entrypoint.py  tasks.py  urls.py  wsgi.py
splinter/apps/activity/: activities.py  logger.py  managers.py  models.py  serializers.py  signals.py  urls.py  views.py
splinter/apps/attachment/: authentication.py  fields.py  image.py  media_urls.py  models.py  serializers.py  tasks.py  token.py  urls.py  views.py
splinter/apps/authn/: __init__.py  models.py  provider.py  serializers.py  shortcuts.py  urls.py  utils.py  validator.py  views.py
splinter/apps/currency/: admin.py  fields.py  managers.py  models.py  serializers.py  shortcuts.py  types.py  urls.py  views.py
splinter/apps/expense/: activities.py  balance.py  fields.py  managers.py  models.py  operations.py  orchestrator.py  prefetch.py  serializers.py  settlements.py  shortcuts.py  signals.py  urls.py  utils.py  views.py
splinter/apps/friend/: fields.py  managers.py  models.py  serializers.py  shortcuts.py  urls.py  views.py
splinter/apps/group/: fields.py  managers.py  models.py  serializers.py  urls.py  views.py
splinter/apps/media/: managers.py  mixins.py  models.py  serializers.py  storage.py  tasks.py  urls.py  utils.py  views.py
splinter/apps/mfa/: __init__.py  configurators.py  serializers.py  urls.py  views.py
splinter/apps/notification/: models.py  receivers.py  serializers.py  tasks.py  urls.py  views.py
splinter/apps/parsing/: client.py  exceptions.py  models.py  results.py  serializers.py  tasks.py  urls.py  views.py
splinter/apps/token/: models.py  serializers.py  shortcuts.py
splinter/apps/user/: admin.py  backend.py  fields.py  managers.py  models.py  postman.py  request_identity.py  (+6 more)
splinter/core/: authentication.py  filters.py  health.py  mixins.py  pagination.py  parsers.py  permissions.py  prefetch.py  renderers.py  robots.py  serializers.py  views.py
splinter/db/: encrypted_field.py  migration_operations.py  polymorphic_serializer.py  public_model.py  soft_delete.py  state_aware.py  urn.py
splinter/settings/: __init__.py  apps.py  auth.py  base.py  cache.py  celery.py  crypto.py  database.py  drf.py  email.py  host.py  logging.py  notification.py  parsing.py  static.py  templates.py
splinter/utils/: django.py  parser.py  strings.py
src/: index.css  routeTree.gen.ts
src/components/: Avatar.tsx
src/fake-data/: friends.ts  index.ts
src/routes/: __root.tsx  activity.tsx  friends.tsx  groups.tsx  profile.tsx
tests/: case.py
tests/_app/: __init__.py
tests/core/: test_parsers.py  test_renderers.py
tests/db/: test_soft_delete.py  test_urn.py
tests/utils/: test_parser.py  test_strings.py
ui/: .env  .eslintrc.cjs  .gitignore  .prettierrc.cjs  Dockerfile  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  pwa-assets.config.ts  tailwind.config.js  tsconfig.json  tsr.config.json  vite.config.ts
ui/.claude/: launch.json
ui/src/: Logo.tsx  authStorage.ts  axios.ts  index.css  main.tsx  queryClient.ts  routeTree.gen.ts  sw.ts
ui/tools/: generate-routes.js  generate-types.js
(+522 files in other folders)
